# FibreCase_C_Learning_Project

./: CMakeLists.txt  GiteeLeaningProject.sln  LICENSE  README.md  history_code_another.c  histroy_code.c  main.c  test.c
GiteeLeaningProject/: Another.c  GiteeLeaningProject.vcxproj  GiteeLeaningProject.vcxproj.filters  history_code_another.c  histroy_code.c  main.c  test.c
SubProjects/: ChemCalu.c
